# lee-hello-world-plugin

./: CMakeLists copy.txt  CMakeLists.txt  REAME.md  build.sh  index.html  lee_juce_file_helpers.h  lee_juce_file_manager.h  lee_juce_json_file.h  lee_juce_plugin_config.h  main.cpp
.github/workflows/: build.yml
